--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-23 Sat 16:12]
+#+CAPTION: Clock summary at [2019-02-23 Sat 16:28]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *224:42* |        |        | 100.0 |
+| *Total time*                                              | *224:57* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 224:42   |        |        | 100.0 |
-| Active                                                    |          | 224:42 |        | 100.0 |
+| Stories                                                   | 224:57   |        |        | 100.0 |
+| Active                                                    |          | 224:57 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   0.9 |
 | Sprint and product backlog grooming                       |          |        |   5:32 |   2.5 |
-| Work on MASD theory                                       |          |        | 113:38 |  50.6 |
+| Work on MASD theory                                       |          |        | 113:38 |  50.5 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.2 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.4 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   2.9 |
@@ -36,14 +36,14 @@
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.0 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Create a colour palette test model                        |          |        |   1:09 |   0.5 |
-| Create a single binary for all of dogen                   |          |        |  38:46 |  17.3 |
+| Create a single binary for all of dogen                   |          |        |  38:46 |  17.2 |
 | Setup a nightly build for Dogen                           |          |        |   3:53 |   1.7 |
 | Great meta-data rename                                    |          |        |   6:00 |   2.7 |
 | Remove the need for =dia.comment= tag                     |          |        |   0:12 |   0.1 |
+| Use tracing options in existing code                      |          |        |   2:25 |   1.1 |
 | Throw on profiles that refer to invalid fields            |          |        |   1:06 |   0.5 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.3 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.3 |
-| Use tracing options in existing code                      |          |        |   2:10 |   1.0 |
 | Model references are not transitive                       |          |        |   0:21 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -914,6 +914,28 @@ Actually these assumptions are not entirely true:
 
 As a result the conclusion is that we should not implement this story.
 
+*** COMPLETED Use tracing options in existing code                    :story:
+    CLOSED: [2019-02-23 Sat 16:28]
+    :LOGBOOK:
+    CLOCK: [2019-02-23 Sat 16:13]--[2019-02-23 Sat 16:28] =>  0:15
+    CLOCK: [2019-02-23 Sat 15:39]--[2019-02-23 Sat 16:12] =>  0:33
+    CLOCK: [2019-02-23 Sat 10:38]--[2019-02-23 Sat 11:18] =>  0:40
+    CLOCK: [2019-02-19 Tue 11:05]--[2019-02-19 Tue 11:18] =>  0:13
+    CLOCK: [2019-02-18 Mon 18:50]--[2019-02-18 Mon 18:52] =>  0:02
+    CLOCK: [2019-02-18 Mon 14:52]--[2019-02-18 Mon 15:04] =>  0:12
+    CLOCK: [2019-02-15 Fri 17:14]--[2019-02-15 Fri 17:44] =>  0:30
+    :END:
+
+Tasks:
+
+- read the byproduct directory and supply it to probing somehow.
+- add dependency to API from tracing.
+- implement a tracer constructor that takes in tracing configuration.
+- add tracing configuration to coding options.
+- update knitter to generate tracing options.
+- delete probing options from configuration.
+- delete probing options from tracer.
+
 *** STARTED Throw on profiles that refer to invalid fields            :story:
     :LOGBOOK:
     CLOCK: [2019-02-22 Fri 21:03]--[2019-02-22 Fri 21:17] =>  0:14
@@ -979,26 +1001,6 @@ Notes:
 - Sent email to clang mailinglist: [[http://lists.llvm.org/pipermail/cfe-dev/2019-February/061326.html][Clang-cl - errors and warning
   messages slightly different from MSVC]]. Clang [[http://lists.llvm.org/pipermail/cfe-dev/2019-February/061339.html][have patched]] the diffs
   now.
-
-*** STARTED Use tracing options in existing code                      :story:
-    :LOGBOOK:
-    CLOCK: [2019-02-23 Sat 15:39]--[2019-02-23 Sat 16:12] =>  0:33
-    CLOCK: [2019-02-23 Sat 10:38]--[2019-02-23 Sat 11:18] =>  0:40
-    CLOCK: [2019-02-19 Tue 11:05]--[2019-02-19 Tue 11:18] =>  0:13
-    CLOCK: [2019-02-18 Mon 18:50]--[2019-02-18 Mon 18:52] =>  0:02
-    CLOCK: [2019-02-18 Mon 14:52]--[2019-02-18 Mon 15:04] =>  0:12
-    CLOCK: [2019-02-15 Fri 17:14]--[2019-02-15 Fri 17:44] =>  0:30
-    :END:
-
-Tasks:
-
-- read the byproduct directory and supply it to probing somehow.
-- add dependency to API from tracing.
-- implement a tracer constructor that takes in tracing configuration.
-- add tracing configuration to coding options.
-- update knitter to generate tracing options.
-- delete probing options from configuration.
-- delete probing options from tracer.
 
 *** STARTED Model references are not transitive                       :story:
     :LOGBOOK:
