--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-23 Sat 16:28]
+#+CAPTION: Clock summary at [2019-02-23 Sat 16:36]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *224:57* |        |        | 100.0 |
+| *Total time*                                              | *225:03* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 224:57   |        |        | 100.0 |
-| Active                                                    |          | 224:57 |        | 100.0 |
+| Stories                                                   | 225:03   |        |        | 100.0 |
+| Active                                                    |          | 225:03 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   0.9 |
 | Sprint and product backlog grooming                       |          |        |   5:32 |   2.5 |
 | Work on MASD theory                                       |          |        | 113:38 |  50.5 |
@@ -41,6 +41,7 @@
 | Great meta-data rename                                    |          |        |   6:00 |   2.7 |
 | Remove the need for =dia.comment= tag                     |          |        |   0:12 |   0.1 |
 | Use tracing options in existing code                      |          |        |   2:25 |   1.1 |
+| Rename profile header only                                |          |        |   0:06 |   0.0 |
 | Throw on profiles that refer to invalid fields            |          |        |   1:06 |   0.5 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.3 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.3 |
@@ -936,6 +937,16 @@ Tasks:
 - delete probing options from configuration.
 - delete probing options from tracer.
 
+*** COMPLETED Rename profile header only                              :story:
+    CLOSED: [2019-02-23 Sat 16:36]
+    :LOGBOOK:
+    CLOCK: [2019-02-23 Sat 16:30]--[2019-02-23 Sat 16:36] =>  0:06
+    :END:
+
+This profile only applies to C++ so it should be:
+
+: masd::cpp::header_only
+
 *** STARTED Throw on profiles that refer to invalid fields            :story:
     :LOGBOOK:
     CLOCK: [2019-02-22 Fri 21:03]--[2019-02-22 Fri 21:17] =>  0:14
@@ -1141,12 +1152,6 @@ At present the utility model has a number of hand-crafted
 exceptions. We need to convert them to dogen exceptions. We also need
 to get rid of the invalid enum exception and use the
 =std::argument...= exception instead.
-
-*** Rename profile header only                                        :story:
-
-This profile only applies to C++ so it should be:
-
-: masd::cpp::header_only
 
 *** JSON models in dogen are out of sync                              :story:
 
