--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-24 Sun 17:42]
+#+CAPTION: Clock summary at [2019-02-24 Sun 17:59]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *227:01* |        |        | 100.0 |
+| *Total time*                                              | *227:17* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 227:01   |        |        | 100.0 |
-| Active                                                    |          | 227:01 |        | 100.0 |
+| Stories                                                   | 227:17   |        |        | 100.0 |
+| Active                                                    |          | 227:17 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   0.9 |
 | Sprint and product backlog grooming                       |          |        |   6:39 |   2.9 |
-| Work on MASD theory                                       |          |        | 113:38 |  50.1 |
+| Work on MASD theory                                       |          |        | 113:38 |  50.0 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.2 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.4 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   2.8 |
@@ -46,7 +46,7 @@
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.3 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.3 |
 | Model references are not transitive                       |          |        |   0:21 |   0.2 |
-| Move top-level transforms into orchestration              |          |        |   0:51 |   0.4 |
+| Move top-level transforms into orchestration              |          |        |   1:07 |   0.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1085,6 +1085,7 @@ rewrite existing code, resulting in a two-phase approach, anyway).
 
 *** STARTED Move top-level transforms into orchestration              :story:
     :LOGBOOK:
+    CLOCK: [2019-02-24 Sun 17:43]--[2019-02-24 Sun 17:59] =>  0:16
     CLOCK: [2019-02-24 Sun 16:51]--[2019-02-24 Sun 17:42] =>  0:51
     :END:
 
