--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-28 Thu 13:54]
+#+CAPTION: Clock summary at [2019-02-28 Thu 14:02]
 | <75>                                                |        |      |      |       |
 | Headline                                            | Time   |      |      |     % |
 |-----------------------------------------------------+--------+------+------+-------|
-| *Total time*                                        | *5:42* |      |      | 100.0 |
+| *Total time*                                        | *5:50* |      |      | 100.0 |
 |-----------------------------------------------------+--------+------+------+-------|
-| Stories                                             | 5:42   |      |      | 100.0 |
-| Active                                              |        | 5:42 |      | 100.0 |
-| Edit release notes for previous sprint              |        |      | 1:27 |  25.4 |
-| Sprint and product backlog grooming                 |        |      | 0:18 |   5.3 |
-| Implement text model generation chain in generation |        |      | 3:37 |  63.5 |
-| Try to fix valgrind warning on =find_files=         |        |      | 0:20 |   5.8 |
+| Stories                                             | 5:50   |      |      | 100.0 |
+| Active                                              |        | 5:50 |      | 100.0 |
+| Edit release notes for previous sprint              |        |      | 1:27 |  24.9 |
+| Sprint and product backlog grooming                 |        |      | 0:18 |   5.1 |
+| Implement text model generation chain in generation |        |      | 3:45 |  64.3 |
+| Try to fix valgrind warning on =find_files=         |        |      | 0:20 |   5.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -198,6 +198,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 *** COMPLETED Implement text model generation chain in generation     :story:
     CLOSED: [2019-02-28 Thu 13:54]
     :LOGBOOK:
+    CLOCK: [2019-02-28 Thu 13:54]--[2019-02-28 Thu 14:02] =>  0:08
     CLOCK: [2019-02-28 Thu 12:59]--[2019-02-28 Thu 13:53] =>  0:54
     CLOCK: [2019-02-28 Thu 10:04]--[2019-02-28 Thu 12:05] =>  2:01
     CLOCK: [2019-02-28 Thu 09:21]--[2019-02-28 Thu 10:03] =>  0:42
