--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,19 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-01 Fri 09:13]
+#+CAPTION: Clock summary at [2019-03-01 Fri 10:54]
 | <75>                                                |         |       |      |       |
 | Headline                                            | Time    |       |      |     % |
 |-----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                        | *10:12* |       |      | 100.0 |
+| *Total time*                                        | *11:52* |       |      | 100.0 |
 |-----------------------------------------------------+---------+-------+------+-------|
-| Stories                                             | 10:12   |       |      | 100.0 |
-| Active                                              |         | 10:12 |      | 100.0 |
-| Edit release notes for previous sprint              |         |       | 1:27 |  14.2 |
-| Sprint and product backlog grooming                 |         |       | 0:18 |   2.9 |
-| Implement text model generation chain in generation |         |       | 3:45 |  36.8 |
-| Move generation model out of coding                 |         |       | 4:22 |  42.8 |
-| Try to fix valgrind warning on =find_files=         |         |       | 0:20 |   3.3 |
+| Stories                                             | 11:52   |       |      | 100.0 |
+| Active                                              |         | 11:52 |      | 100.0 |
+| Edit release notes for previous sprint              |         |       | 1:27 |  12.2 |
+| Sprint and product backlog grooming                 |         |       | 0:18 |   2.5 |
+| Implement text model generation chain in generation |         |       | 3:45 |  31.6 |
+| Move generation model out of coding                 |         |       | 4:22 |  36.8 |
+| Rename endomodel to just model                      |         |       | 1:40 |  14.0 |
+| Try to fix valgrind warning on =find_files=         |         |       | 0:20 |   2.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -249,6 +250,18 @@ handles the tracer creation in injection.
 - then delete the model and transforms from coding; delete the
   adaptors from generation models (cpp, csharp).
 - then move the model to text model chain into generation.
+
+*** STARTED Rename endomodel to just model                            :story:
+    :LOGBOOK:
+    CLOCK: [2019-03-01 Fri 09:14]--[2019-03-01 Fri 10:54] =>  1:40
+    :END:
+
+Now we just have one model in coding we can rename it to something
+sensible. Update all transforms, variables, etc.
+
+Notes:
+
+- what is new adapter in coding?
 
 *** STARTED Try to fix valgrind warning on =find_files=               :story:
     :LOGBOOK:
